--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -36,29 +36,29 @@ About
           <li class="list-group-item">
           <h4 class="list-group-item-heading">refurence's will do the following:</h4>
               <p class="list-group-item-text">
-              - ask for permission to create a folder in your Dropbox via the Dropbox API</br></br>
-              - create its own folder in your Dropbox Apps folders</br></br>
-              - upload, delete, and modify files within its own Dropbox folder</br></br>
-              - in order to make images publicly visible, refurence will automatically "Share so anyone with a link can view" all files in the refurence folder</br></br>
-              - store text and URLs that you add to your refurence into a database</br></br>
+              - ask for permission to create a folder in your Dropbox via the Dropbox API</br>
+              - create its own folder in your Dropbox Apps folders</br>
+              - upload, delete, and modify files within its own Dropbox folder</br>
+              - in order to make images publicly visible, refurence will automatically "Share so anyone with a link can view" all files in the refurence folder</br>
+              - store text and URLs that you add to your refurence into a database</br>
               </p>
           </li>
           <li class="list-group-item">
               <h4 class="list-group-item-heading">refurence's will NOT do the following:</h4>
               <p class="list-group-item-text">
-              - store your password.  refurence forces users to login with their credentials through Dropbox; this means refurence will never see your password</br></br>
-              - share your data.  not like its very useful anyway :p</br></br>
-              - show ads or make any money of any kind.</br></br>
+              - store your password.  refurence forces users to login with their credentials through Dropbox; this means refurence will never see your password</br>
+              - share your data.  not like its very useful anyway :p</br>
+              - show ads or make any money of any kind.</br>
               </p>
           </li>
           <li class="list-group-item">
-              <h4 class="list-group-item-heading">Refurence for Dropbox</h4>
+              <h4 class="list-group-item-heading">refurence for Dropbox</h4>
               <p class="list-group-item-text">
-              - refurence uses Dropbox for ease of hosting and sharing images for public viewing</br></br>
-              - refurence does NOT have access to anything other than files in the folder it creates in your Dropbox</br></br>
-              - this folder is created as "/Apps/refurence"</br></br>
-              - using Dropbox gives the user more control over which images are hosted and how</br></br>
-              - using Dropbox simplifies the process of authenticating users</br></br>
+              - refurence uses Dropbox for ease of hosting and sharing images for public viewing</br>
+              - refurence does NOT have access to anything other than files in the folder it creates in your Dropbox</br>
+              - this folder is created as "/Apps/refurence"</br>
+              - using Dropbox gives the user more control over which images are hosted and how</br>
+              - using Dropbox simplifies the process of authenticating users</br>
               </p>
           </li>
       </ul>
