--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -31,21 +31,31 @@
 								{{ neo.render_avatarimg(profile.header)}}
 						</div>
 				</div>
-				<div class="col-xs-12 hr fill-solid"></div>
-				<div class="col-xs-12">
-						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-								{% for i in range(0, profile.description.tables.keys()|length) %}
-								<div class="panel description-content" id="description-content-{{i}}">
-										<div class="panel-heading" role="tab" id="heading{{i}}">
-												<a class="panel-data-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse{{i}}" aria-expanded="true" aria-controls="collapse{{i}}">
-														<h4 class="panel-title">{{ profile.description.get_keys()[i] }}</h4>
-												</a>
-										</div>
-								</div>
-								{% endfor %}
+				{% if is_me %}
+						<div class="col-xs-12">
+						<a class="btn btn-dark btn-lg" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
+						<span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
+						Edit Profile
+						</a>
 						</div>
-				</div>
+				{% endif %}
 				<div class="col-xs-12 hr fill-solid"></div>
+				{% if profile.description.tables.keys()|length > 0 %}
+						<div class="col-xs-12">
+								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+										{% for i in range(0, profile.description.tables.keys()|length) %}
+										<div class="panel description-content" id="description-content-{{i}}">
+												<div class="panel-heading" role="tab" id="heading{{i}}">
+														<a class="panel-data-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse{{i}}" aria-expanded="true" aria-controls="collapse{{i}}">
+																<h4 class="panel-title">{{ profile.description.get_keys()[i] }}</h4>
+														</a>
+												</div>
+										</div>
+										{% endfor %}
+								</div>
+						</div>
+						<div class="col-xs-12 hr fill-solid"></div>
+				{% endif %}
 				<div class="col-xs-12">
 						<div class="btn-group-vertical" role="group" aria-label="..."
 								style="width:100%;">
@@ -54,12 +64,8 @@
 								<a href="{{dropbox.login_url}}">login with dropbox</a>
 						</button>
 						{% else %}
-						<!-- <a href="#" class="btn btn-primary btn-xs col-lg-12" style="margin-bottom:4px; word-wrap:break-word;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a> -->
 						<a class="btn btn-default" href="{{ url_for('users.controlpanel')}}">{{dropbox.account_info['email']}}</a>
 						<a class="btn btn-default" href="{{dropbox.logout_url}}">logout</a>
-						<!-- <button type="button" class="btn btn-default"> -->
-								<!-- <a href="{{dropbox.logout_url}}">logout</a> -->
-						<!-- </button> -->
 						{% endif %}
 				</div>
 				<ul class="nav navbar-nav navbar-right">
