--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -20,6 +20,23 @@
 
 
 {% block navbar %}
+<nav class="navbar navbar-default" id="neo-nav">
+    <div class="container-fluid" id="neo-nav-container">
+        <!-- Nav links -->
+        <div class="collapse navbar-collapse" id="neonavbar">
+
+            <ul class="nav navbar-nav navbar-right">
+                {% if not dropbox.is_authenticated %}
+                <li> <a href="{{dropbox.login_url}}">login with dropbox</a> </li>
+                {% else %}
+                <li> <a href="{{ url_for('users.controlpanel')}}">{{dropbox.account_info['email']}}</a></li>
+                <li><a href="{{dropbox.logout_url}}">logout</a> </li>
+                {% endif %}
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
 {% endblock %}
 
 {% block content %}
@@ -28,73 +45,63 @@
 				<p style="text-align: center">
 				<div class="col-xs-12">
 						<div id="avatar">
-								{{ neo.render_avatarimg(profile.header)}}
+								<img id="{{AVATAR_IMG}}" class="img-responsive img-circle avatar-img centered" src="{{ profile.header.avatar_url }}">
 						</div>
 				</div>
 				{% if is_me %}
-						<div class="col-xs-12">
-						<a class="btn btn-dark btn-lg" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
-						<span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
-						Edit Profile
-						</a>
-						</div>
-				{% endif %}
-				<div class="col-xs-12 hr fill-solid"></div>
-				{% if profile.description.tables.keys()|length > 0 %}
-						<div class="col-xs-12">
-								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-										{% for i in range(0, profile.description.tables.keys()|length) %}
-										<div class="panel description-content" id="description-content-{{i}}">
-												<div class="panel-heading" role="tab" id="heading{{i}}">
-														<a class="panel-data-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse{{i}}" aria-expanded="true" aria-controls="collapse{{i}}">
-																<h4 class="panel-title">{{ profile.description.get_keys()[i] }}</h4>
-														</a>
-												</div>
-										</div>
-										{% endfor %}
-								</div>
-						</div>
-						<div class="col-xs-12 hr fill-solid"></div>
-				{% endif %}
+				<div class="col-xs-12 hr fill-low-opacity"></div>
 				<div class="col-xs-12">
-						<div class="btn-group-vertical" role="group" aria-label="..."
-								style="width:100%;">
-						{% if not dropbox.is_authenticated %}
-						<button type="button" class="btn btn-default">
-								<a href="{{dropbox.login_url}}">login with dropbox</a>
-						</button>
-						{% else %}
-						<a class="btn btn-default" href="{{ url_for('users.controlpanel')}}">{{dropbox.account_info['email']}}</a>
-						<a class="btn btn-default" href="{{dropbox.logout_url}}">logout</a>
-						{% endif %}
+						<a class="btn btn-dark btn-lg btn-sidebar" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
+								<span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
+								Edit Profile
+						</a>
 				</div>
-				<ul class="nav navbar-nav navbar-right">
-				</ul>
-		</div>
-		</p>
-</div>
-<div class="col-md-11 col-md-offset-1 content">
-		{% for i in range(0, profile.description.tables.keys()|length) %}
-		<div id="collapse{{i}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading{{i}}">
-				{% if profile.description.get_tables()[i].get_image_links()[0] %}
-				<div class="panel-body" style="background: url({{profile.description.get_tables()[i].get_image_links()[0]}}) 50% 50% / cover no-repeat; min-height: 500px;">
-				{% else %}
-				<div class="panel-body">
 				{% endif %}
-						<div class="row">
-								<div class="col-xs-12 panel-body-text" 
-										{% if not profile.description.get_tables()[i].get_text() %}
-										style="background-color: transparent;"
-										{% endif %}
-										>
-										<p class="text-editable">{{ profile.description.get_tables()[i].get_text() }}</p>
+				<div class="col-xs-12 hr fill-low-opacity"></div>
+				{% if profile.description.tables.keys()|length > 0 %}
+				<div class="col-xs-12">
+						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+								{% for i in range(0, profile.description.tables.keys()|length) %}
+								<div class="panel description-content" id="description-content-{{i}}">
+										<div class="panel-heading btn-sidebar" role="tab" id="heading{{i}}">
+												<a class="panel-data-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse{{i}}" aria-expanded="true" aria-controls="collapse{{i}}">
+														<h4 class="panel-title">{{ profile.description.get_keys()[i] }}</h4>
+												</a>
+										</div>
 								</div>
+								{% endfor %}
 						</div>
 				</div>
+				{% endif %}
+				</p>
 		</div>
-		{% endfor %}
-		{{ neo.render_gallery(profile.gallery) }}
-</div>
+		<div class="col-md-11 col-md-offset-1 content">
+				<div class="col-xs-12" id="header">
+						<h1 id="{{HEADER_TITLE}}" class="text-editable"
+								contenteditable="{{editable}}">{{ profile.header.title }}</h1>
+						<h4 id="{{HEADER_BODY}}" class="text-editable"
+								contenteditable="{{editable}}">{{ profile.header.body }}</h4>
+				</div>
+				{% for i in range(0, profile.description.tables.keys()|length) %}
+				<div id="collapse{{i}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading{{i}}">
+						{% if profile.description.get_tables()[i].get_image_links()[0] %}
+						<div class="panel-body" style="background: url({{profile.description.get_tables()[i].get_image_links()[0]}}) 50% 50% / cover no-repeat; min-height: 500px;">
+								{% else %}
+								<div class="panel-body">
+										{% endif %}
+										<div class="col-xs-12 panel-body-text" 
+												{% if not profile.description.get_tables()[i].get_text() %}
+												style="background-color: transparent;"
+												{% endif %}
+												>
+												<p class="text-editable">{{ profile.description.get_tables()[i].get_text() }}</p>
+										</div>
+								</div>
+						</div>
+						{% endfor %}
+						{{ neo.render_gallery(profile.gallery) }}
+				</div>
+		</div>
 </div> <!-- END container -->
 
 {% endblock %} <!-- END block content -->
@@ -124,7 +131,7 @@ families: [
 $(function() {
 				$('.panel-data-toggle').on('click', function() {
 						$(this).parent().toggleClass("clicked");
-				})
-});
+						})
+				});
 </script>
 {% endblock %}
