--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -8,6 +8,7 @@
 
 {% block styles %}
 {{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/blueimp-gallery.min.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/neo.css') }}">
 {{ neo.render_header_style(profile) }}
 {% endblock %}
@@ -104,6 +105,41 @@
 		</div>
 </div> <!-- END container -->
 
+<!-- blueimp -->
+<div id="blueimp-gallery" class="blueimp-gallery">
+  <!-- The container for the modal slides -->
+  <div class="slides"></div>
+  <!-- Controls for the borderless lightbox -->
+  <h3 class="title"></h3>
+  <a class="prev">‹</a>
+  <a class="next">›</a>
+  <a class="close">×</a>
+  <a class="play-pause"></a>
+  <ol class="indicator"></ol>
+  <!-- The modal dialog, which will be used to wrap the lightbox content -->
+  <div class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" aria-hidden="true">&times;</button>
+          <h4 class="modal-title"></h4>
+        </div>
+        <div class="modal-body next"></div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default pull-left prev">
+            <i class="glyphicon glyphicon-chevron-left"></i>
+            Previous
+          </button>
+          <button type="button" class="btn btn-primary next">
+            Next
+            <i class="glyphicon glyphicon-chevron-right"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> <!-- END blueimp -->
+
 {% endblock %} <!-- END block content -->
 
 {% block scripts %}
@@ -124,6 +160,7 @@ families: [
 }
 });
 </script>
+<script src={{ url_for('static', filename='js/blueimp-gallery.min.js') }} type="text/javascript"></script>
 <script src={{ url_for('static', filename='js/imagesloaded.pkgd.min.js') }} type="text/javascript"></script>
 <script src={{ url_for('static', filename='js/detail.js') }} type="text/javascript"></script>
 
