--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -68,7 +68,7 @@ button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 {% endmacro %}
 
 {% macro render_links_gallery(gallery) %}
-{% for url in gallery.get_image_urls(debug=True)%}
+{% for url in gallery.get_image_urls(debug=False)%}
 		<a href="{{ url }}" title="{{ url }}" data-gallery>
 				<img class="post" src="{{ url }}" alt="" style="{{gallery.get_image_style(url)}}">
 		</a>
