--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -68,15 +68,15 @@ button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 {% endmacro %}
 
 {% macro render_links_gallery(gallery) %}
-{% for url in gallery.get_image_urls(debug=True)%}
+{% for url in gallery.get_image_urls(debug=False)%}
 		<a href="{{ url }}" title="{{ url }}" data-gallery>
-				<img class="post" src="{{ url }}" alt="" style="{{gallery.get_image_style(url)}}">
+				<img class="post" src="{{ url }}" alt="" style="{{ gallery.get_image_style(url) }}">
 		</a>
 {% endfor %}
 {% endmacro %}
 
 {% macro render_gallery(gallery) %}
-		{% for i in range(0, gallery.tables|length) %}
+		{% for i in range(0, gallery.get_tables()|length) %}
 		<a class="gallery-nav" href="#gallery-tab-{{i}}" data-toggle="tab">{{ gallery.get_table_names()[i] }}</a>
 		<div class="row gallery-links posts">
 				{{ render_links_gallery(gallery.get_tables()[i]) }}
