--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -153,12 +153,14 @@
 								</div>
 								<div class="row">
 										<div class="col-xs-12">
-												{{ neo.render_gallery(profile.gallery) }}
+												{% for gallery in profile.get_galleries() %}
+														{{ neo.render_gallery(gallery) }}
+												{% endfor %}
 										</div>
 								</div>
 						</div> <!-- END container -->
 				</div> <!-- END col-xs-11 -->
-				<div class="col-xs-1" id="imglink_col">
+				<div class="col-xs-1" id="imglink_col imglink-container">
 						<ul class="nav nav-stacked" id="imglinks">
 								{% for i in range(0, profile.sidebar.img_links|length) %}
 								<div class="col-xs-12 hr fill-low-opacity"></div>
