--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -161,26 +161,7 @@
 						</div> <!-- END container -->
 				</div> <!-- END col-xs-11 -->
 				<div class="col-xs-1" id="imglink_col imglink-container">
-						<ul class="nav nav-stacked" id="imglinks">
-								{% for i in range(0, profile.sidebar.img_links|length) %}
-								<div class="col-xs-12 hr fill-low-opacity"></div>
-								<div class="col-xs-12">
-										<li>
-												<a href="{{ profile.sidebar.img_links[i].link_url }}">
-														<img class="centered imglink-img" src="{{ profile.sidebar.img_links[i].get_image_url() }}">
-												</a>
-										</li>
-								</div>
-								{% endfor %}
-								<div class="col-xs-12 hr fill-low-opacity"></div>
-								<div class="col-xs-12">
-										<li style="text-align:center;">
-										<button id="btn_sidebar_add_link" class="btn btn-default">
-												<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
-										</button>
-										</li>
-								</div>
-						</ul>
+						{{ neo.render_editable_imglinks(profile.sidebar.img_links)}}
 				</div>
 		</div> <!-- END row -->
 </div> <!-- END container -->
@@ -202,8 +183,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src={{url_for('static', filename="js/sijax/sijax.js") }}></script>
-<script type="text/javascript" src={{url_for('static', filename="js/jquery.fontselect.min.js") }}></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js"></script>
 <script type="text/javascript">
 {{ g.sijax.get_js()|safe }}
@@ -232,6 +211,8 @@ families: [
 <script src={{ url_for('static', filename='js/blueimp-gallery.min.js') }} type="text/javascript"></script>
 <script src={{ url_for('static', filename='js/imagesloaded.pkgd.min.js') }} type="text/javascript"></script>
 <script src={{ url_for('static', filename='js/detail.js') }} type="text/javascript"></script>
+<script type="text/javascript" src={{url_for('static', filename="js/jquery.fontselect.min.js") }}></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.js"></script>
 
 <script>
 $(function() {
@@ -299,6 +280,7 @@ $(function() {
         $('.nav-pills>li.active').css("color", color);
       }
     }
+
     $('#{{ BKG_COLOR }}').spectrum({
         change: function(color) {
         this.changed = true;
@@ -362,5 +344,5 @@ $(function() {
 </script>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.min.js"></script> 
-<script type="text/javascript" src={{url_for('static', filename="js/editable.js") }}></script>
+<script type="text/javascript" src={{url_for('static', filename="js/neo_edit.js") }}></script>
 {% endblock %}
